--- a/templates/main.html
+++ b/templates/main.html
@@ -50,6 +50,6 @@
     {% endfor %}
     </table>
 
-<h4> Camille Scott, 2015: <a href="https://github.com/camillescott/pipecleaner">github.com/camillescott/pipecleaner</a></h4>
+<h4><a href="https://github.com/camillescott/pipecleaner">github.com/camillescott/pipecleaner</a></h4>
 </body>
 </html>
