--- a/templates/main.html
+++ b/templates/main.html
@@ -15,40 +15,18 @@
   
     <table>
     <tr class="header">
-        <td class="header_region">Region</td>
-        <td class="header">Nullsec System</td>
-        <td class="header">Ship Kills</td>
-        <td class="header">Pod Kills</td>
-        <td class="header">Jumps</td>
-        <td class="header">Entry System</td>
-        <td class="header">Ship Kills</td>
-        <td class="header">Pod Kills</td>
-        <td class="header">Jumps</td>
+        <td class="header_region"><a href="groupby/Region">Region</a></td>
+        <td class="header"><a href="sortby/Dest">Nullsec System</a></td>
+        <td class="header"><a href="sortby/Dest_ShipKills">Ship Kills</a></td>
+        <td class="header"><a href="sortby/Dest_PodKills">Pod Kills</a></td>
+        <td class="header"><a href="sortby/Dest_Jumps">Jumps</a></td>
+        <td class="header"><a href="sortby/Entry">Entry System</a></td>
+        <td class="header"><a href="sortby/Entry_ShipKills">Ship Kills</a></td>
+        <td class="header"><a href="sortby/Entry_PodKills">Pod Kills</a></td>
+        <td class="header"><a href="sortby/Entry_Jumps">Jumps</a></td>
     </tr>
-    {% for region, group in systems.groupby('Dest_Region') %}
-
-        <tr class="region_div">
-        <th class="region" rowspan="{{group.index.size}}"> {{ region }} </th>
-        {% for _, system in group.sort_values('Dest').iterrows() %}
-                <td>
-                    <a href="http://zkillboard.com/system/{{system.Dest_ID}}/">{{ system.Dest }}</a>
-                </td>
-                <td>{{ kills.ix[system.Dest_ID].ship|int }}</td>
-                <td>{{ kills.ix[system.Dest_ID].pod|int }} </td>
-                <td>{{ jumps.ix[system.Dest_ID].jumps}}</td>
-
-                <td>
-                    <a href="http://zkillboard.com/system/{{system.Entry_ID}}/">{{ system.Entry }}</a> ({{system.Entry_Sec}})
-                </td>
-                <td>{{ kills.ix[system.Entry_ID].ship|int }}</td>
-                <td>{{ kills.ix[system.Entry_ID].pod|int }} </td>
-                <td>{{ jumps.ix[system.Entry_ID].jumps}} </td>
-
-                </tr>
-                <tr>
-        {% endfor %}
-        </tr>
-    {% endfor %}
+    {% block content %}
+    {% endblock %}
     </table>
 
 <h4><a href="https://github.com/camillescott/pipecleaner">github.com/camillescott/pipecleaner</a></h4>
