Fix Region url redirect

--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,7 @@
   
     <table>
     <tr class="header">
-        <td class="header_region"><a href="groupby/Region">Region</a></td>
+        <td class="header_region"><a href="{{url_for('region')}}">Region</a></td>
         <td class="header">
             <a href="{{url_for('sortby', key='Dest')}}">Nullsec System</a>
         </td>
