Fix a display error and add colors

--- a/templates/groupby_region.html
+++ b/templates/groupby_region.html
@@ -11,7 +11,7 @@
         <td>
             <a href="http://zkillboard.com/system/{{row.Dest_ID}}/">{{ row.Dest }}</a>
         </td>
-        <td>{{ row.Dest_PodKills|int }}</td>
+        <td>{{ row.Dest_ShipKills|int }}</td>
         <td>{{ row.Dest_PodKills|int }} </td>
         <td>{{ row.Dest_Jumps|int }}</td>
 
